Fix some UI issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   
   <style>
     body.light {
-      background-color: #f7f7f7;
+      background-color: rgba(240, 240, 240, 0.9);
       color: #1c1c1c;
     }
 
@@ -25,7 +25,6 @@
       background: rgba(32, 32, 32, 0.9); /* Reduced darkness */
       backdrop-filter: blur(10px);
       padding: 20px;
-      border-bottom: 1px solid #333;
       text-shadow: 0 0 2px rgba(255, 255, 255, 0.4);
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5); /* Added shadow */
     }
@@ -41,23 +40,21 @@
     .wrapper-footer {
       background: rgba(32, 32, 32, 0.9);
       padding: 20px;
-      border-top: 1px solid #333;
       color: #e0e0e0;
-      text-shadow: 0 0 2px rgba(255, 255, 255, 0.7);
+      text-shadow: 0 0 2px rgba(255, 255, 255, 0.4);
       box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
     }
 
     body.light .wrapper-footer {
-      background: rgba(255, 255, 255, 0.9); /* Lighter background */
+      background: rgba(192, 192, 192, 0.7); /* Lighter background */
       color: #1c1c1c; /* Black text */
       text-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     body.light .wrapper-masthead {
-      background: rgba(255, 255, 255, 0.9); /* Lighter background */
+      background: rgba(192, 192, 192, 0.7); /* Lighter background */
       color: #1c1c1c; /* Black text */
-      border-bottom: 1px solid #ccc;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
