Fix some UI issues

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
   <style>
     body.light {
       background-color: rgba(240, 240, 240, 0.9);
@@ -34,6 +36,14 @@
     }
 
     body.light .wrapper-masthead .site-name {
+      color: #1c1c1c;
+    }
+
+    .wrapper-masthead .site-description {
+      color: #e0e0e0;
+    }
+
+    body.light .wrapper-masthead .site-description {
       color: #1c1c1c;
     }
 
